--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div id="app_vue"></div>
     <div id="app"></div>
+    <script type="module" src="/main_vue.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
