--- a/article.html
+++ b/article.html
@@ -8,5 +8,6 @@
   <body>
 		<a href="./article.html">article</a>
 		<a href="./user.html">user</a>
+    <script type="module" src="./webroot/build/js/Article/main.js"></script>
   </body>
 </html>
