--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Vite App</title>
   </head>
   <body>
+		<div id="app_vue"></div>
 		<a href="./article.html">article</a>
 		<a href="./user.html">user</a>
+		<script type="module" src="./main_vue.js"></script>
   </body>
 </html>
