--- a/webroot/index.html
+++ b/webroot/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script type="module" crossorigin src="/build/js/top.js"></script>
+    <link rel="modulepreload" href="/build/js/vendor.js">
   </head>
   <body>
+		<div id="app_vue"></div>
 		<a href="./article.html">article</a>
 		<a href="./user.html">user</a>
-    <script type="module" src="./webroot/src/js/Article/main.js"></script>
+		
   </body>
 </html>
