--- a/webroot/index.html
+++ b/webroot/index.html
@@ -6,11 +6,15 @@
     <title>Vite App</title>
     <script type="module" crossorigin src="/build/js/top.js"></script>
     <link rel="modulepreload" href="/build/js/vendor.js">
+    <script type="module">!function(){try{new Function("m","return import(m)")}catch(o){console.warn("vite: loading legacy build because dynamic import is unsupported, syntax error above should be ignored");var e=document.getElementById("vite-legacy-polyfill"),n=document.createElement("script");n.src=e.src,n.onload=function(){System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))},document.body.appendChild(n)}}();</script>
   </head>
   <body>
 		<div id="app_vue"></div>
 		<a href="./article.html">article</a>
 		<a href="./user.html">user</a>
 		
+    <script nomodule>!function(){var e=document,t=e.createElement("script");if(!("noModule"in t)&&"onbeforeload"in t){var n=!1;e.addEventListener("beforeload",(function(e){if(e.target===t)n=!0;else if(!e.target.hasAttribute("nomodule")||!n)return;e.preventDefault()}),!0),t.type="module",t.src=".",e.head.appendChild(t),t.remove()}}();</script>
+    <script nomodule id="vite-legacy-polyfill" src="/assets/polyfills-legacy.98892b3a.js"></script>
+    <script nomodule id="vite-legacy-entry" data-src="/build/js/top-legacy.js">System.import(document.getElementById('vite-legacy-entry').getAttribute('data-src'))</script>
   </body>
 </html>
