--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 		<div id="app_vue"></div>
-		<a href="./article.html">article</a>
+		<a href="./article.html">aaaaaaarticle</a>
 		<a href="./user.html">user</a>
 		<script type="module" src="./main_vue.js"></script>
   </body>
